--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "space-salesman",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,8 +19,15 @@
   "homepage": "https://github.com/banasraf/space-salesman#readme",
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/express": "^4.17.0",
+    "@types/express-formidable": "^1.0.3",
+    "@types/express-session": "^1.15.13",
     "@types/mocha": "^5.2.6",
+    "@types/node": "^12.0.10",
     "@types/selenium-webdriver": "^4.0.0",
+    "@types/sqlite3": "^3.1.5",
+    "@types/uuid": "^3.4.4",
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
@@ -28,9 +35,17 @@
     "mocha": "^6.1.4",
     "mocha-webdriver": "^0.1.13",
     "selenium-webdriver": "^4.0.0-alpha.1",
-    "ts-node": "^8.1.0",
+    "ts-node": "^8.3.0",
     "tsify": "^4.0.1",
     "typescript": "^3.4.5",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.16.2",
+    "sqlite3": "^4.0.9",
+    "uuid": "^3.3.2"
   }
 }
